data/forge_javadoc/1.10.2/processed/net_minecraft_client_renderer_texture_TextureMap.md
# TextureMap

**Inheritance:** java.lang.Object → net.minecraft.client.renderer.texture.AbstractTexture → net.minecraft.client.renderer.texture.TextureMap

## Class signature

```java
public class TextureMap extends AbstractTexture implements ITickableTextureObject
```

## Constructors

- `TextureMap(java.lang.String basePathIn)`
- `TextureMap(java.lang.String basePathIn, boolean skipFirst)`
- `TextureMap(java.lang.String basePathIn, ITextureMapPopulator iconCreatorIn)`
- `TextureMap(java.lang.String basePathIn, ITextureMapPopulator iconCreatorIn, boolean skipFirst)`

## Methods

- `TextureAtlasSprite getAtlasSprite(java.lang.String iconName)`
- `java.lang.String getBasePath()`
- `int getMipmapLevels()`
- `TextureAtlasSprite getMissingSprite()`
- `TextureAtlasSprite getTextureExtry(java.lang.String name)` — Grabs the registered entry for the specified name, returning null if there was not a entry.
- `void loadSprites(IResourceManager resourceManager, ITextureMapPopulator iconCreatorIn)`
- `void loadTexture(IResourceManager resourceManager)`
- `void loadTextureAtlas(IResourceManager resourceManager)`
- `TextureAtlasSprite registerSprite(ResourceLocation location)`
- `void setMipmapLevels(int mipmapLevelsIn)`
- `@Deprecated boolean setTextureEntry(java.lang.String name, TextureAtlasSprite entry)`
- `boolean setTextureEntry(TextureAtlasSprite entry)`
- `void tick()`
- `void updateAnimations()`

## Fields

- `static ResourceLocation LOCATION_BLOCKS_TEXTURE`
- `static ResourceLocation LOCATION_MISSING_TEXTURE`